# agent-forge

./: .gitignore  AGENT_FORGE.md  CLAUDE.md  README.md  config.example.yaml  install.sh  pyproject.toml  remote-agent-infrastructure-handover.md  requirements.txt
.claude/agents/: CATALOG.md
agent_forge/: __init__.py  agent_manager.py  claude_usage_collector.py  cli.py  config.py  database.py  demo.py  hook_reporter.py  log_manager.py  main.py  media_handler.py  metrics_collector.py  registry.py  remote_image_builder.py  remote_scanner.py  response_extractor.py  status_monitor.py  summarizer.py  telegram_gateway.py  terminal_bridge.py  tmux_utils.py  websocket_manager.py
agent_forge/connectors/: __init__.py  base.py  discord.py  manager.py  signal.py  slack.py  telegram.py  whatsapp.py
static/css/: style.css
static/js/: terminal.js  websocket.js
templates/: agent_detail.html  base.html  config.html  console.html  dashboard.html  metrics.html  project_detail.html  settings.html
templates/components/: agent_row.html  project_card.html  terminal.html
tests/: conftest.py  test_agent_manager.py  test_claude_usage_collector.py  test_config_api.py  test_connector_api.py  test_connector_base.py  test_connector_manager.py  test_discord_connector.py  test_media_handler.py  test_metrics_collector.py  test_registry.py  test_remote_config.py  test_remote_execution.py  test_remote_scanner.py  test_response_extractor.py  test_slack_connector.py  test_status_monitor.py  test_summarizer.py  test_telegram_gateway.py  test_terminal_bridge.py  test_whatsapp_connector.py
(+2 files in other folders)
